# AndroidImportLibrary

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cbasiclibrary/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/cbasiclibrary/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cbasiclibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
